--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 db.driverClassName=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost:5432/postgres
-db.username=admin
-db.password=admin
+db.username=postgres
+db.password=1234
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 hibernate.show_sql=true
